OLAP server has been added