@@ -2,69 +2,34 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>performance-db</artifactId>
-        <groupId>com.iu.db.indexes</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.iu.db.indexes</groupId>
+    <artifactId>performance-db</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
+  <modelVersion>4.0.0</modelVersion>
+  <artifactId>db-server</artifactId>
+  <packaging>pom</packaging>
 
-    <artifactId>db-server</artifactId>
-    <packaging>pom</packaging>
+  <modules>
+    <module>db-server-common</module>
+    <module>indexes</module>
+    <module>tasks</module>
+    <module>server-service</module>
+    <module>server-instance</module>
+  </modules>
 
-    <modules>
-        <module>db-server-common</module>
-        <module>server-service</module>
-        <module>tasks</module>
-        <module>server-instance</module>
-        <module>indexes</module>
-    </modules>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>com.iu.db.indexes</groupId>
-                <artifactId>db-server-service</artifactId>
-                <version>${db-server.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.iu.db.indexes</groupId>
-                <artifactId>db-server-instance</artifactId>
-                <version>${db-server.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.iu.db.indexes</groupId>
-                <artifactId>db-server-runner</artifactId>
-                <version>${db-server.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.iu.db.indexes</groupId>
-                <artifactId>db-server-stopper</artifactId>
-                <version>${db-server.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.iu.db.indexes</groupId>
-                <artifactId>db-tasks</artifactId>
-                <version>${db-server.version}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>21</source>
+          <target>21</target>
+          <compilerArgs><arg>--enable-preview</arg></compilerArgs>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
